hphp/test/slow/type_constraint/null_type_with_null_default.php.expectf
hello
hello

Catchable fatal error: Argument 1 passed to foo() must be an instance of null, int given in %s on line 11
